// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-card ant-card-bordered ant-card-rtl css-var-root"
  >
    <!---->
    <!---->
    <div
      class="ant-card-body"
    >
      Card content
    </div>
    <!---->
  </div>
</div>
`;

exports[`card > should match snapshot - basic 1`] = `
"<div class="ant-card ant-card-bordered css-var-root">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card Title</div>
      <div class="ant-card-extra">Extra</div>
    </div>
    <!---->
  </div>
  <!---->
  <div class="ant-card-body">Card content</div>
  <!---->
</div>"
`;

exports[`card > should match snapshot - loading 1`] = `
"<div class="ant-card ant-card-loading ant-card-bordered css-var-root">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card Title</div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div class="ant-card-body">
    <div class="ant-skeleton ant-skeleton-active css-var-root">
      <!---->
      <div class="ant-skeleton-section">
        <!---->
        <ul class="ant-skeleton-paragraph">
          <li></li>
          <li></li>
          <li></li>
          <li style="width: 61%;"></li>
        </ul>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`card > should match snapshot - small size inner type 1`] = `
"<div class="ant-card ant-card-bordered ant-card-small ant-card-type-inner css-var-root">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card Title</div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div class="ant-card-body">Card content</div>
  <!---->
</div>"
`;

exports[`card > should match snapshot - with Card.Grid 1`] = `
"<div class="ant-card ant-card-bordered ant-card-contain-grid css-var-root">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card Title</div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div class="ant-card-body">
    <div class="ant-card-grid ant-card-grid-hoverable">Grid 1</div>
    <div class="ant-card-grid ant-card-grid-hoverable">Grid 2</div>
  </div>
  <!---->
</div>"
`;

exports[`card > should match snapshot - with Card.Meta 1`] = `
"<div class="ant-card ant-card-bordered css-var-root">
  <!---->
  <!---->
  <div class="ant-card-body">
    <div class="ant-card-meta">
      <div class="ant-card-meta-avatar"><span>A</span></div>
      <div class="ant-card-meta-section">
        <div class="ant-card-meta-title">Meta Title</div>
        <div class="ant-card-meta-description">Meta Description</div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`card > should match snapshot - with cover and actions 1`] = `
"<div class="ant-card ant-card-bordered css-var-root">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card Title</div>
      <!---->
    </div>
    <!---->
  </div>
  <div class="ant-card-cover"><img src="test.jpg" alt="cover"></div>
  <div class="ant-card-body">Card content</div>
  <ul class="ant-card-actions">
    <li style="width: 50%;"><span><span>Action1</span></span></li>
    <li style="width: 50%;"><span><span>Action2</span></span></li>
  </ul>
</div>"
`;
